# discord_bot

./: Cargo.toml  LICENSE  README.md
src/: event.rs  help.rs  main.rs  utils.rs
src/cmds/: execution.rs  mod.rs  moderation.rs  owner.rs
