[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"
authors = ["Luca Suntinger <sunti27@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }