[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"
authors = ["Luca Suntinger <sunti27@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["default", "collector"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pyo3 = { version = "0.15.1" , features = ["auto-initialize"] }
lazy_static = "1.4"
regex = "1.5"